Cleanup and minor speed-up refactor of BioModel.java